fixed dark mode colors

--- a/src/components/checkitem/checkitem.module.scss
+++ b/src/components/checkitem/checkitem.module.scss
@@ -1,7 +1,7 @@
 .listItem {
   .text {
     margin-left: 9px;
-    color: var(--color-text);
+    color: var(--color-right-menu);
   }
 
   input[type='checkbox'] {
