--- a/src/components/comment/comment.module.scss
+++ b/src/components/comment/comment.module.scss
@@ -79,7 +79,7 @@ $emojis-modal-breakpoint: 480px;
   margin: 16px;
   padding: 0 16px;
   border-radius: 20px;
-  background-color: rgba(228, 227, 232, 0.4);
+  background-color: var(--color-small-block);
 }
 
 .input {
@@ -91,10 +91,10 @@ $emojis-modal-breakpoint: 480px;
   background-color: transparent;
   min-height: 36px;
   @include mixins.useFont(14px, 21px, 400, Poppins);
-  color: colors.$black;
+  color: var(--color-text);
 
   &::placeholder {
-    color: colors.$steel;
+    color: var(--color-comment);
     opacity: 1;
   }
 }
@@ -104,6 +104,10 @@ $emojis-modal-breakpoint: 480px;
   align-items: center;
   justify-content: center;
   font-size: 16px;
+
+  svg {
+    color: var(--color-comment);
+  }
 }
 
 .sendButton {
@@ -111,7 +115,7 @@ $emojis-modal-breakpoint: 480px;
   align-items: center;
   justify-content: center;
   @include mixins.useFont(16px, 24px);
-  color: colors.$steel;
+  color: var(--color-comment);
 }
 
 .emojis {
