--- a/src/components/quote/quoteProgress.module.scss
+++ b/src/components/quote/quoteProgress.module.scss
@@ -8,7 +8,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
-  color: var(--color-text);
+  color: var(--color-right-menu);
 }
 
 .percent {
@@ -54,7 +54,7 @@
 
 .hideTasksButton {
   cursor: pointer;
-
+  color: var(--c-gray);
   svg {
     vertical-align: middle;
   }
