--- a/src/components/tabs/filesTab.module.scss
+++ b/src/components/tabs/filesTab.module.scss
@@ -34,7 +34,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 21px;
-    color: var(--color-text);
+    color: var(--steel);
     background-color: var(--color-small-block);
     border: none;
     padding: 5px;
